force-app/main/default/objects/Reconsideration__c/Reconsideration__c.object-meta.xml
<CustomObject>
    <label>Reconsideration</label>
    <nameField>
        <displayFormat>RRC-{0000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconsiderations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>