force-app/main/default/objects/Reconsideration__c/fields/ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>BusinessLicenseApplication</referenceTo>
    <relationshipLabel>Reconsiderations</relationshipLabel>
    <relationshipName>Reconsiderations</relationshipName>
    <type>Lookup</type>
</CustomField>