force-app/main/default/objects/Reconsideration__c/fields/GPMS_Comments__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Comments__c</fullName>
    <description>Displays when Reconsideration Outcome is recorded.</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>