force-app/main/default/objects/Reconsideration__c/fields/Outcome_Comment__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Comment__c</fullName>
    <label>Outcome Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>