force-app/main/default/objects/Reconsideration__c/fields/Reconsideration_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Reconsideration_Date_Received__c</fullName>
    <label>Reconsideration Date Received</label>
    <type>Date</type>
</CustomField>