force-app/main/default/objects/Reconsideration__c/fields/Request_Comment__c.field-meta.xml
<CustomField>
    <fullName>Request_Comment__c</fullName>
    <label>Request Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>