force-app/main/default/objects/Reconsideration__c/fields/Type_of_Reconsideration_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Reconsideration_Outcome__c</fullName>
    <label>Reconsideration Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affirm</fullName>
            </value>
            <value>
                <fullName>Vary</fullName>
            </value>
            <value>
                <fullName>Set Aside Decision and Substitute a New Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>