force-app/main/default/objects/Reconsideration__c/fields/Type_of_Reconsideration_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Reconsideration_Request__c</fullName>
    <label>Type of Reconsideration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reconsideration conducted due to request by Applicant</fullName>
            </value>
            <value>
                <fullName>Reconsideration conducted due to a request by the Commission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>