force-app/main/default/objects/Reconsideration__c/validationRules/Reconsideration_Request_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Reconsideration_Request_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),!ISNULL(Application__c), TEXT(Application__r.Application_Status__c)!=&quot;Closed&quot;)</errorConditionFormula>
    <errorMessage>Application must be closed before a Reconsideration is Requested.</errorMessage>
</ValidationRule>