force-app/main/default/objects/Reconsideration__c/validationRules/ReconsiderationReconsiderationAssessment.validationRule-meta.xml
<ValidationRule>
    <fullName>ReconsiderationReconsiderationAssessment</fullName>
    <active>true</active>
    <description>Reconsideration Reconsideration Assessment</description>
    <errorConditionFormula>AND(NOT( $Setup.BypassTriggers__c.BypassValidationRules__c ), !ISNEW(), ISBLANK(Owner:User.Id),ISPICKVAL(ApplicationId__r.NewStatus__c, &quot;Reconsideration Assessment&quot;))</errorConditionFormula>
    <errorMessage>Owner must be changed to a user before status is changed to &apos;Reconsideration Assessment&apos;.</errorMessage>
</ValidationRule>